
* 2009-07-10 Andres Aquino <andres.aquino@gmail.com>
     9a735db: documentacion en aplicacion...
     d45ac22: manual de ayuda
     ce206fd: adecuando a los directorios por defecto..

* 2009-07-07 Andres Aquino <andres.aquino@gmail.com>
     a9ab79e: correcciones para ejecucion de comandos..

* 2009-07-06 Andres Aquino <andres.aquino@gmail.com>
     fd77d58: changelog actualizado, quitar nextel.profile, agregar soya.conf
     4825994: primer compilado del archivos de ayuda
     1b88882: se agrega script de instalacion
     c43ac0f: se anexa archivo de ayuda para construir el man
     4ba922b: se corrige ejecucion de comandos
     2504ceb: mas comandos en ejecucion...
     b728d9e: se agregaron los comandos la log on y off ..
     90ce836: Muestra version agregando el cmd .version...
     838178a: se implemento la ejecucion de comandos alternos...

* 2009-07-04 Andres Aquino <andres.aquino@gmail.com>
     850055c: fuera archivos no necesarios, use funciones del libutils
     c647ff4: ready, el primer stable !
     9aa34bd: utils.lib.sh to libutils.sh
     0fdcd39: service.conf to soya.conf
     61a7b17: cambio service.sh to soya.sh
     e6c8a90: se determina la construccion del nombre

* 2009-06-29 Andres Aquino <andres.aquino@gmail.com>
     99f4eeb: borrado de directorio scrips así como archivos no utiles
     3819da2: depurando archivos que no son utiles para el Stable

* 2009-06-28 Andres Aquino <andres.aquino@gmail.com>
     4d2443c: Eliminar archivos que no son utiles para el stable
     7f75cc5: desaparece personal.profile
     184cb3e: Se agrego nextel.profile, desaparece personal.profile

* 2009-06-26 Andres Aquino <andres.aquino@gmail.com>
     ad3030d: cambios que realice en la 10.103.12.135
     86e9c78: historico de cambios...

* 2009-06-26 aQzero <aqzero@gmail.com>
     695bc7b: copias de servidores anteriores
     020c39d: se validaron y son correctos

* 2009-06-23 aQzero <aqzero@gmail.com>
     ced3911: notas varias para manejar el screen