@@ -1,25 +1,0 @@
-# CONF 
-# vim: set ts=3 et sw=3 sts=3 si ai: 
- 
-# soya.conf -- put here a short description.
-# ---------------------------------------------------------------------------- 
-# (c) 2009 Nextel de México S.A. de C.V.
-# Andrés Aquino Morales <andres.aquino@gmail.com>
-# All rights reserved.
-# 
-
-#apHome=/media/DELL/nextel.com.mx/soya.git
-#apType=CM | CX | BL | NM | FF
-#apCommand="sh ~/scripts/start_cms.sh -name ${scrName}"
-
-apLogsOn="tracelog ALL"
-apLogsOff="tracelog OFF"
-apSyslogsOn="systemlog ALL"
-apSyslogsOff="systemlog OFF"
-apDBlogsOn="databaselog ALL"
-apDBlogsOff="databaselog OFF"
-apLogsClear=NONE
-apBackup=NONE
-apLevel="level"
-
-
