@@ -1,5 +1,8 @@
 
 * 2009-07-10 Andres Aquino <andres.aquino@gmail.com>
+     631f6da: borrado de archivos ya no necesarios
+     f2e1740: cambios en setup para aplicaciones...
+     a3a00ac: Update changelog file
      9a735db: documentacion en aplicacion...
      d45ac22: manual de ayuda
      ce206fd: adecuando a los directorios por defecto..
